crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__recovery__lambda_missing_close.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
fun demo() { run { value(1)

syntax:
syntax:
KotlinFile
  AnnotationList
  KotlinFileItemList
    FunctionDeclaration
      ModifierList
      ModifierList
      FunKw "fun" @ 0..3 trailing=[Whitespace " "]
      ModifierList
      CallableName
        CallableNamePartList
          Name
            Identifier "demo" @ 4..8
      ValueParameterList
        LParen "(" @ 8..9
        ValueParameterSeparatedList
        RParen ")" @ 9..10 trailing=[Whitespace " "]
      Block
        LBrace "{" @ 11..12 trailing=[Whitespace " "]
        BlockItemList
          Statement
            ExpressionStatement
              CallExpression
                NameExpression
                  Identifier "run" @ 13..16 trailing=[Whitespace " "]
                TypeArgumentListList
                LambdaExpressionList
                  LambdaExpression
                    LambdaBody
                      LBrace "{" @ 17..18 trailing=[Whitespace " "]
                      LambdaBodyItemList
                        Statement
                          ExpressionStatement
                            CallExpression
                              NameExpression
                                Identifier "value" @ 19..24
                              TypeArgumentListList
                              ValueArgumentList
                                LParen "(" @ 24..25
                                ValueArgumentEntryList
                                  ValueArgument
                                    ValueArgumentPrefixList
                                    LiteralExpression
                                      IntegerLiteral "1" @ 25..26
                                RParen ")" @ 26..27
                              LambdaExpressionList
                          TerminatorList
            TerminatorList
  Eof "" @ 28..28 leading=[Newline "\n"]

diagnostics:
  code=kotlin.parse.expected_syntax severity=Error stage=Parser range=28..28 message="expected '}' after lambda"
  code=kotlin.parse.expected_syntax severity=Error stage=Parser range=28..28 message="expected '}' after block"

diagnostics:
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(28), end: TextSize(28) }) message=expected '}' after lambda
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(28), end: TextSize(28) }) message=expected '}' after block
