crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__recovery__lambda_parameter_list.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
fun demo() { { first, /* orphan */ , second -> first } }

syntax:
syntax:
KotlinFile
  AnnotationList
  KotlinFileItemList
    FunctionDeclaration
      ModifierList
      ModifierList
      FunKw "fun" @ 0..3 trailing=[Whitespace " "]
      ModifierList
      Name
        Identifier "demo" @ 4..8
      ValueParameterList
        LParen "(" @ 8..9
        ValueParameterSeparatedList
        RParen ")" @ 9..10 trailing=[Whitespace " "]
      BlockBody
        Block
          LBrace "{" @ 11..12 trailing=[Whitespace " "]
          BlockItemList
            Statement
              ExpressionStatement
                LambdaExpression
                  LambdaBody
                    LBrace "{" @ 13..14 trailing=[Whitespace " "]
                    LambdaParameterList
                      LambdaParameterSeparatedList
                        LambdaParameter
                          ModifierList
                          LambdaParameterBinding
                            Name
                              Identifier "first" @ 15..20
                        Comma "," @ 20..21 trailing=[Whitespace " ", BlockComment "/* orphan */", Whitespace " "]
                        BogusLambdaParameter
                        Comma "," @ 35..36 trailing=[Whitespace " "]
                        LambdaParameter
                          ModifierList
                          LambdaParameterBinding
                            Name
                              Identifier "second" @ 37..43 trailing=[Whitespace " "]
                      Arrow "->" @ 44..46 trailing=[Whitespace " "]
                    LambdaBodyItemList
                      Statement
                        ExpressionStatement
                          NameExpression
                            Identifier "first" @ 47..52 trailing=[Whitespace " "]
                        TerminatorList
                    RBrace "}" @ 53..54 trailing=[Whitespace " "]
              TerminatorList
          RBrace "}" @ 55..56
  Eof "" @ 57..57 leading=[Newline "\n"]

diagnostics:
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=35..36 message="expected lambda parameter between commas"

diagnostics:
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(35), end: TextSize(36) }) message=expected lambda parameter between commas
